# wallpaper

./: Cargo.toml
src/: lib.rs  main.rs
src/core/: app.rs  backend.rs  buffer.rs  cache.rs  daemon.rs  ipc.rs  pool.rs  shm.rs
src/display/: monitor.rs
src/image/: loader.rs  transform.rs
src/utils/: cli.rs  error.rs  wayland.rs
