[package]
name = "wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.2.0", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
memfd = "0.6.4"
memmap2 = "0.9.0"
log = "0.4.25"
