[package]
name = "wallpaper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.6", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0"
memfd = "0.6.4"
memmap2 = "0.9.5"
log = "0.4.25"
env_logger = "0.11.6"
fast_image_resize = "3.0"
rayon = "1.10.0"
